Design setup but not fully ready

--- a/index.html
+++ b/index.html
@@ -12,8 +12,70 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Hello Word!</h1>
+    <!-- ▓▒▒▒▒▒▒▒▒▒▒▒ HEADER SECTION ▒▒▒▒▒▒▒▒▒▒▒▓ -->
+    <header>
+        <section class="pc-intro mt-5">
+            <div class="container">
+                <div class="pc-and-description">
+                    <div class="row">
+                        <div class="col">
+                            <!-- MAC IMAGE -->
+                            <div class="pc-img">
+                                <img class="img-fluid" src="images/mac.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <!-- PC INTRODUCTION -->
+                            <div class="pc-intro">
+                                <h1>Customize your Blue 24' inch iMac Apple with M1 chip</h1>
+                                <p>Safari has innovation features that let you enjoy more of the web . In even more ways. Built-in privacy features help protect your information and keep your Mac secure. An updated start page helps you to easily and quickly save, find, and share your favorite sites.</p>
+                            </div>
+                            <!-- VARIANT OF THE MAC -->
+                            <div class="variant mt-5">
+                                    <h6>Memory</h6>
+                                    <button  id="memory-8gb">8GB Unified Memory</button>
+                                    <button  id="memory-16gb">16GB Unified Memory</button>
 
+                                    <h6 class="mt-5">Storage</h6>
+                                    <button id="storage-226gb">226GB SSD Storage</button>
+                                    <button id="storage-512gb">512GB SSD Storage</button>
+                                    <button id="storage-1tb">1TB SSD Storage</button>
+
+                                    <h6 class="mt-5">Choose Your Delevery Option</h6>
+                                    <button  id="free-delevery">Friday, for free Delevery</button>
+                                    <button id="delevery-charge">Ordered : next day Delevery for charge $20</button>
+                            </div>
+                            <!-- PRICING -->
+                            <div class="pricing mt-5">
+                                <div class="row">
+                                    <div class="col"><h6>Best Price : </h6></div>
+                                    <div class="col"><h6>$<span>1290</span></h6></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col"><h6>Extra Memory Cost : </h6></div>
+                                    <div class="col">
+                                        <h6>$<span>0</span></h6>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col"><h6>Extra Storage Cost : </h6></div>
+                                    <div class="col"><h6>$<span>0</span></h6></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col"><h6>Delevery Charge : </h6></div>
+                                    <div class="col"><h6>$<span>0</span></h6></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col"><h6>Total Price : </h6></div>
+                                    <div class="col"><h6>$<span>1290</span></h6></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
 
     <!-- JavaScript -->
     <script src="js/bootstrap.bundle.min.js"></script>
