--- a/index.html
+++ b/index.html
@@ -32,43 +32,53 @@
                             </div>
                             <!-- VARIANT OF THE MAC -->
                             <div class="variant mt-5">
-                                    <h6>Memory</h6>
+                                    <h5>Memory</h5>
                                     <button  id="memory-8gb">8GB Unified Memory</button>
                                     <button  id="memory-16gb">16GB Unified Memory</button>
 
-                                    <h6 class="mt-5">Storage</h6>
-                                    <button id="storage-226gb">226GB SSD Storage</button>
+                                    <h5 class="mt-5">Storage</h5>
+                                    <button id="storage-226gb">256GB SSD Storage</button>
                                     <button id="storage-512gb">512GB SSD Storage</button>
                                     <button id="storage-1tb">1TB SSD Storage</button>
 
-                                    <h6 class="mt-5">Choose Your Delevery Option</h6>
+                                    <h5 class="mt-5">Choose Your Delevery Option</h5>
                                     <button  id="free-delevery">Friday, for free Delevery</button>
                                     <button id="delevery-charge">Ordered : next day Delevery for charge $20</button>
                             </div>
                             <!-- PRICING -->
-                            <div class="pricing mt-5">
-                                <div class="row">
-                                    <div class="col"><h6>Best Price : </h6></div>
-                                    <div class="col"><h6>$<span>1290</span></h6></div>
-                                </div>
-                                <div class="row">
-                                    <div class="col"><h6>Extra Memory Cost : </h6></div>
-                                    <div class="col">
-                                        <h6>$<span>0</span></h6>
+                            <div class="pricing mt-5 mb-5">
+                               <div class="row">
+                                   <div class="col">
+                                    <div class="row">
+                                        <div class="col"><h5>Best Price : </h5></div>
+                                        <div class="col"><h5>$<span>1299</span></h5></div>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col"><h6>Extra Storage Cost : </h6></div>
-                                    <div class="col"><h6>$<span>0</span></h6></div>
-                                </div>
-                                <div class="row">
-                                    <div class="col"><h6>Delevery Charge : </h6></div>
-                                    <div class="col"><h6>$<span>0</span></h6></div>
-                                </div>
-                                <div class="row">
-                                    <div class="col"><h6>Total Price : </h6></div>
-                                    <div class="col"><h6>$<span>1290</span></h6></div>
-                                </div>
+                                    <div class="row">
+                                        <div class="col"><h5>Extra Memory Cost : </h5></div>
+                                        <div class="col">
+                                            <h5>$<span id="extra-memory-cost">0</span></h5>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col"><h5>Extra Storage Cost : </h5></div>
+                                        <div class="col"><h5>$<span id="extra-storage-cost">0</span></h5></div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col"><h5>Delevery Charge : </h5></div>
+                                        <div class="col"><h5>$<span id="delevery-cost">0</span></h5></div>
+                                    </div>  <hr>
+                                    <div class="row total-price-row">
+                                        <div class="col"><h5>Total Price : </h5></div>
+                                        <div class="col"><h5>$<span id="total-price">1299</span></h5></div>
+                                    </div>
+                                   </div>
+                               </div>
+                            </div>
+                            <!-- PROMO CODE INPUT -->
+                            <div class="promo-code mb-5">
+                                <h4>Add Your Promo Code</h4>
+                                <input type="text" name="" id="promo-code" placeholder="Enter Your Discount Code">
+                                <button id="promo-button" class="btn btn-danger">Apply</button>
                             </div>
                         </div>
                     </div>
@@ -76,6 +86,15 @@
             </div>
         </section>
     </header>
+
+     <!-- ▓▒▒▒▒▒▒▒▒▒▒▒ FOOTER SECTION ▒▒▒▒▒▒▒▒▒▒▒▓ -->
+    <footer>
+        <div class="container mt-5">
+            <div class="footer-total text-center">
+                  <h1>Total: $<span id="total-price">1299</span></h1>
+            </div>
+        </div>
+    </footer>
 
     <!-- JavaScript -->
     <script src="js/bootstrap.bundle.min.js"></script>
