--- a/index.html
+++ b/index.html
@@ -1,103 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Joynal Bin Tofajjal" content="Ecommerce Like Single Product Web Page Design and Developed By Joynal Bin Tofajjal">
     <title>MacBook Pro</title>
-    <!-- BOOTSTRAP CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- BOOTSTRAP CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <!-- ▓▒▒▒▒▒▒▒▒▒▒▒ HEADER SECTION ▒▒▒▒▒▒▒▒▒▒▒▓ -->
-    <header>
-        <section class="pc-intro mt-5">
-            <div class="container">
-                <div class="pc-and-description">
-                    <div class="row">
-                        <div class="col">
-                            <!-- MAC IMAGE -->
-                            <div class="pc-img">
-                                <img class="img-fluid" src="images/mac.png" alt="">
-                            </div>
-                        </div>
-                        <div class="col">
-                            <!-- PC INTRODUCTION -->
-                            <div class="pc-intro">
-                                <h1>Customize your Blue 24' inch iMac Apple with M1 chip</h1>
-                                <p>Safari has innovation features that let you enjoy more of the web . In even more ways. Built-in privacy features help protect your information and keep your Mac secure. An updated start page helps you to easily and quickly save, find, and share your favorite sites.</p>
-                            </div>
-                            <!-- VARIANT OF THE MAC -->
-                            <div class="variant mt-5">
-                                    <h5>Memory</h5>
-                                    <button  id="memory-8gb">8GB Unified Memory</button>
-                                    <button  id="memory-16gb">16GB Unified Memory</button>
+    <main>
+        <section class="container">
+            <div class="row justify-content-center gx-5 mt-5">
+                <div class="col-12 col-md-5 col-sm-10">
+                    <img src="images/mac.png" class="w-100" alt="Macbook Image">
+                </div>
+                <div class="col-12 col-md-6">
+                    <!-- PC INTRODUCTION -->
+                    <div class="pc-intro">
+                        <h1>Customize your Blue 24' inch iMac Apple with M1 chip</h1>
+                        <p>Safari has innovation features that let you enjoy more of the web . In even more ways. Built-in privacy
+                            features help protect your information and keep your Mac secure. An updated start page helps you to easily
+                            and quickly save, find, and share your favorite sites.</p>
+                    </div>
 
-                                    <h5 class="mt-5">Storage</h5>
-                                    <button id="storage-226gb">256GB SSD Storage</button>
-                                    <button id="storage-512gb">512GB SSD Storage</button>
-                                    <button id="storage-1tb">1TB SSD Storage</button>
+                <!-- ▓▒▒▒▒▒▒▒▒▒▒▒ VARIANT SECTION ▒▒▒▒▒▒▒▒▒▒▒▓ -->
+                <div class="variant mt-5">
+                        <!-- MEMORY PART -->
+                        <h5>Memory</h5>
+                        <button type="button" id="normal-ram-btn">8GB Unified Memory</button>
+                        <button type="button" id="extra-ram-btn">16GB Unified Memory</button>
+                       
+                        <!-- STORAGE PART -->
+                        <h5 class="mt-5">Storage</h5>
+                        <button id="normal-ssd-btn">256GB SSD Storage</button>
+                        <button id="extra-ssd-btn">512GB SSD Storage</button>
+                        <button id="ultra-ssd-btn">1TB SSD Storage</button>
 
-                                    <h5 class="mt-5">Choose Your Delevery Option</h5>
-                                    <button  id="free-delevery">Friday, for free Delevery</button>
-                                    <button id="delevery-charge">Ordered : next day Delevery for charge $20</button>
-                            </div>
-                            <!-- PRICING -->
-                            <div class="pricing mt-5 mb-5">
-                               <div class="row">
-                                   <div class="col">
-                                    <div class="row">
-                                        <div class="col"><h5>Best Price : </h5></div>
-                                        <div class="col"><h5>$<span>1299</span></h5></div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col"><h5>Extra Memory Cost : </h5></div>
-                                        <div class="col">
-                                            <h5>$<span id="extra-memory-cost">0</span></h5>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col"><h5>Extra Storage Cost : </h5></div>
-                                        <div class="col"><h5>$<span id="extra-storage-cost">0</span></h5></div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col"><h5>Delevery Charge : </h5></div>
-                                        <div class="col"><h5>$<span id="delevery-cost">0</span></h5></div>
-                                    </div>  <hr>
-                                    <div class="row total-price-row">
-                                        <div class="col"><h5>Total Price : </h5></div>
-                                        <div class="col"><h5>$<span id="total-price">1299</span></h5></div>
-                                    </div>
-                                   </div>
-                               </div>
-                            </div>
-                            <!-- PROMO CODE INPUT -->
-                            <div class="promo-code mb-5">
-                                <h4>Add Your Promo Code</h4>
-                                <input type="text" name="" id="promo-code" placeholder="Enter Your Discount Code">
-                                <button id="promo-button" class="btn btn-danger">Apply</button>
-                            </div>
+                        <!-- DELEVERY PART -->
+                        <h5 class="mt-5">Choose Your Delevery Option</h5>
+                        <button   type="button" id="free-delivery-btn">Friday, for free Delevery</button>
+                        <button  type="button" id="fast-delivery-btn">Ordered : next day Delevery for charge $20</button>
+                </div>
+
+                  <!-- ▓▒▒▒▒▒▒▒▒▒▒▒ PRICING SECTION ▒▒▒▒▒▒▒▒▒▒▒▓ -->
+                    <div class="row mt-5 mb-5">
+                        <div class="col-md-6 col-12">
+                            <table class="table">
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">
+                                            Best Price
+                                        </th>
+                                        <td class="fw-bold">
+                                            $<span id="best-price">1299</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">
+                                            Extra Memory Cost
+                                        </th>
+                                        <td class="fw-bold">
+                                            $<span id="ram-price">0</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">
+                                            Extra Storage Cost
+                                        </th>
+                                        <td class="fw-bold">
+                                            $<span id="ssd-price">0</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">
+                                            Delivery Charge
+                                        </th>
+                                        <td class="fw-bold">
+                                            $<span id="delivery-cost">0</span>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <th scope="row">
+                                            Total Price
+                                        </th>
+                                        <td class="fw-bold">
+                                            $<span id="total-price" class="text-danger">1299</span>
+                                        </td>
+                                    </tr>
+                                </tfoot>
+                            </table>
                         </div>
                     </div>
+
+
+                    <!-- ▓▒▒▒▒▒▒▒▒▒▒▒ PROMO CODE OR CUPPON CODE SECTION ▒▒▒▒▒▒▒▒▒▒▒▓ -->
+                      <div class="promo-code mb-5">
+                        <h4>Add Your Promo Code</h4>
+                        <input type="text" name="" id="promo-code-input" placeholder="Enter Your Discount Code">
+                        <button id="promo-code-apply-btn" type="submit" class="btn btn-danger">Apply</button>
+                      </div>
                 </div>
             </div>
+            <hr>
         </section>
-    </header>
-
-     <!-- ▓▒▒▒▒▒▒▒▒▒▒▒ FOOTER SECTION ▒▒▒▒▒▒▒▒▒▒▒▓ -->
+    </main>
+    <!-- ▓▒▒▒▒▒▒▒▒▒▒▒ FOOTER SECTION ▒▒▒▒▒▒▒▒▒▒▒▓ -->
     <footer>
         <div class="container mt-5">
             <div class="footer-total text-center">
-                  <h1>Total: $<span id="total-price">1299</span></h1>
+                  <h1>Total: $<span id="total-price-with-discount" class="text-danger">1299</span></h1>
             </div>
         </div>
     </footer>
-
-    <!-- JavaScript -->
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- CUSTOM JAVASCRIPT FILE -->
     <script src="js/app.js"></script>
 </body>
 </html>
