added new title

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Joynal Bin Tofajjal" content="Ecommerce Like Single Product Web Page Design and Developed By Joynal Bin Tofajjal">
-    <title>MacBook Pro</title>
+    <meta name="Joynal Bin Tofajjal"
+        content="Ecommerce Like Single Product Web Page Design and Developed By Joynal Bin Tofajjal">
+    <title>MacBook Pro v2.0</title>
     <!-- BOOTSTRAP CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- CUSTOM CSS -->
@@ -24,18 +25,20 @@
                     <!-- PC INTRODUCTION -->
                     <div class="pc-intro">
                         <h1>Customize your Blue 24' inch iMac Apple with M1 chip</h1>
-                        <p>Safari has innovation features that let you enjoy more of the web . In even more ways. Built-in privacy
-                            features help protect your information and keep your Mac secure. An updated start page helps you to easily
+                        <p>Safari has innovation features that let you enjoy more of the web . In even more ways.
+                            Built-in privacy
+                            features help protect your information and keep your Mac secure. An updated start page helps
+                            you to easily
                             and quickly save, find, and share your favorite sites.</p>
                     </div>
 
-                <!-- ▓▒▒▒▒▒▒▒▒▒▒▒ VARIANT SECTION ▒▒▒▒▒▒▒▒▒▒▒▓ -->
-                <div class="variant mt-5">
+                    <!-- ▓▒▒▒▒▒▒▒▒▒▒▒ VARIANT SECTION ▒▒▒▒▒▒▒▒▒▒▒▓ -->
+                    <div class="variant mt-5">
                         <!-- MEMORY PART -->
                         <h5>Memory</h5>
                         <button type="button" id="normal-ram-btn">8GB Unified Memory</button>
                         <button type="button" id="extra-ram-btn">16GB Unified Memory</button>
-                       
+
                         <!-- STORAGE PART -->
                         <h5 class="mt-5">Storage</h5>
                         <button id="normal-ssd-btn">256GB SSD Storage</button>
@@ -44,11 +47,11 @@
 
                         <!-- DELEVERY PART -->
                         <h5 class="mt-5">Choose Your Delevery Option</h5>
-                        <button   type="button" id="free-delivery-btn">Friday, for free Delevery</button>
-                        <button  type="button" id="fast-delivery-btn">Ordered : next day Delevery for charge $20</button>
-                </div>
+                        <button type="button" id="free-delivery-btn">Friday, for free Delevery</button>
+                        <button type="button" id="fast-delivery-btn">Ordered : next day Delevery for charge $20</button>
+                    </div>
 
-                  <!-- ▓▒▒▒▒▒▒▒▒▒▒▒ PRICING SECTION ▒▒▒▒▒▒▒▒▒▒▒▓ -->
+                    <!-- ▓▒▒▒▒▒▒▒▒▒▒▒ PRICING SECTION ▒▒▒▒▒▒▒▒▒▒▒▓ -->
                     <div class="row mt-5 mb-5">
                         <div class="col-md-6 col-12">
                             <table class="table">
@@ -102,11 +105,11 @@
 
 
                     <!-- ▓▒▒▒▒▒▒▒▒▒▒▒ PROMO CODE OR CUPPON CODE SECTION ▒▒▒▒▒▒▒▒▒▒▒▓ -->
-                      <div class="promo-code mb-5">
+                    <div class="promo-code mb-5">
                         <h4>Add Your Promo Code</h4>
                         <input type="text" name="" id="promo-code-input" placeholder="Enter Your Discount Code">
                         <button id="promo-code-apply-btn" type="submit" class="btn btn-danger">Apply</button>
-                      </div>
+                    </div>
                 </div>
             </div>
             <hr>
@@ -116,11 +119,12 @@
     <footer>
         <div class="container mt-5">
             <div class="footer-total text-center">
-                  <h1>Total: $<span id="total-price-with-discount" class="text-danger">1299</span></h1>
+                <h1>Total: $<span id="total-price-with-discount" class="text-danger">1299</span></h1>
             </div>
         </div>
     </footer>
     <!-- CUSTOM JAVASCRIPT FILE -->
     <script src="js/app.js"></script>
 </body>
+
 </html>
