--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Joynal Bin Tofajjal"
         content="Ecommerce Like Single Product Web Page Design and Developed By Joynal Bin Tofajjal">
-    <title>MacBook Pro v2.0</title>
+    <title>MacBook Pro</title>
     <!-- BOOTSTRAP CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- CUSTOM CSS -->
